# AutoBililiveUploader

./: .gitignore  README.md  gen_bililive_replay.py  main.py  pyproject.toml
Scripts/: Startup.vbs  init.wsl
app/: __init__.py  config.py  config.toml
app/blueprints/blrs/: __init__.py  utils.py
app/blueprints/blrs/BililiveRecorder/: __init__.py  examples.json  schema.py  view.py
app/blueprints/blrs/blrec/: examples.json  schema.py  views.py
app/blueprints/main/: __init__.py  view.py
app/core/: __init__.py  schema.py  session.py  task.py  utils.py  video.py
